[gd_scene load_steps=19 format=2]

[ext_resource path="res://hubinicial/HUD/MainHUD.gd" type="Script" id=1]
[ext_resource path="res://assets/iconos/user.png" type="Texture" id=2]
[ext_resource path="res://assets/iconos/iconos-X-cerrar.png" type="Texture" id=3]
[ext_resource path="res://assets/PopUp.png" type="Texture" id=4]
[ext_resource path="res://assets/iconos/iconos-Menu-.png" type="Texture" id=5]
[ext_resource path="res://assets/iconos/store.png" type="Texture" id=6]
[ext_resource path="res://assets/iconos/trash can-game.png" type="Texture" id=7]
[ext_resource path="res://assets/iconos/animal-game.png" type="Texture" id=8]
[ext_resource path="res://assets/iconos/arboles.png" type="Texture" id=9]
[ext_resource path="res://assets/iconos/tree-game.png" type="Texture" id=10]
[ext_resource path="res://assets/iconos/salir.png" type="Texture" id=11]
[ext_resource path="res://assets/iconos/atras.png" type="Texture" id=12]
[ext_resource path="res://SFX/3.1. mouse-click1.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/iconos/cavadao_game.png" type="Texture" id=14]

[sub_resource type="DynamicFontData" id=15]
font_path = "res://fonts/Righteous-Regular.ttf"

[sub_resource type="DynamicFont" id=12]
size = 25
use_mipmaps = true
use_filter = true
font_data = SubResource( 15 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://fonts/Righteous-Regular.ttf"

[sub_resource type="DynamicFont" id=14]
size = 24
font_data = SubResource( 9 )

[node name="MainHud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -3.0
margin_bottom = -1.0
script = ExtResource( 1 )

[node name="NombreJugador" type="Label" parent="."]
margin_left = 86.0
margin_top = 4.0
margin_right = 197.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( 140, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
text = "Nombre
"
max_lines_visible = 1
__meta__ = {
"_editor_description_": ""
}

[node name="ProfileButton" type="TextureButton" parent="."]
margin_left = 7.0
margin_top = 5.0
margin_right = 76.0
margin_bottom = 71.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
expand = true

[node name="Exit" type="TextureButton" parent="."]
margin_left = 952.0
margin_top = -5.0
margin_right = 1022.0
margin_bottom = 75.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )

[node name="Menu" type="TextureButton" parent="."]
margin_left = 888.0
margin_right = 960.0
margin_bottom = 72.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 3

[node name="MenuBg" type="ColorRect" parent="."]
visible = false
margin_left = 904.0
margin_top = 67.0
margin_right = 1019.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.262745 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
margin_left = 926.0
margin_top = 68.0
margin_right = 1026.0
margin_bottom = 688.0
rect_scale = Vector2( 0.85727, 0.85727 )

[node name="VBoxMenu" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 100.0
margin_bottom = 620.0

[node name="Tienda" type="TextureButton" parent="HBoxContainer/VBoxMenu" groups=["botones"]]
margin_right = 100.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
texture_normal = ExtResource( 6 )

[node name="Enciclopedia" type="TextureButton" parent="HBoxContainer/VBoxMenu" groups=["botones"]]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
texture_normal = ExtResource( 9 )

[node name="Cavado" type="TextureButton" parent="HBoxContainer/VBoxMenu" groups=["botones"]]
margin_top = 208.0
margin_right = 100.0
margin_bottom = 308.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
texture_normal = ExtResource( 14 )

[node name="Reciclaje" type="TextureButton" parent="HBoxContainer/VBoxMenu" groups=["botones"]]
margin_top = 312.0
margin_right = 100.0
margin_bottom = 412.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )

[node name="Animales" type="TextureButton" parent="HBoxContainer/VBoxMenu"]
margin_top = 416.0
margin_right = 100.0
margin_bottom = 516.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )

[node name="Arbol" type="TextureButton" parent="HBoxContainer/VBoxMenu" groups=["botones"]]
margin_top = 520.0
margin_right = 100.0
margin_bottom = 620.0
mouse_default_cursor_shape = 2
size_flags_vertical = 4
texture_normal = ExtResource( 10 )

[node name="SalirPopup" type="Popup" parent="."]
margin_left = 344.0
margin_top = 198.0
margin_right = 671.0
margin_bottom = 421.0
popup_exclusive = true

[node name="TextureRect" type="TextureRect" parent="SalirPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.5
margin_top = -149.5
margin_right = 200.5
margin_bottom = 151.5
texture = ExtResource( 4 )

[node name="SalirMenu" type="Button" parent="SalirPopup" groups=["botones"]]
margin_left = 72.0
margin_top = 23.0
margin_right = 273.0
margin_bottom = 60.0
focus_mode = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 0.984314, 0.984314, 0.984314, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
enabled_focus_mode = 1
text = "Men√∫ Principal"

[node name="TextureRect2" type="TextureRect" parent="SalirPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.5
margin_top = -24.5
margin_right = -97.5
margin_bottom = 28.5
texture = ExtResource( 11 )
expand = true

[node name="SalirJuego" type="Button" parent="SalirPopup" groups=["botones"]]
margin_left = 75.0
margin_top = 97.0
margin_right = 277.0
margin_bottom = 134.0
focus_mode = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 0.984314, 0.984314, 0.984314, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
enabled_focus_mode = 1
text = "Salir Del Juego"

[node name="TextureRect3" type="TextureRect" parent="SalirPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.5
margin_top = -100.5
margin_right = -101.5
margin_bottom = -45.5
texture = ExtResource( 12 )
expand = true

[node name="Cancelar4" type="Button" parent="SalirPopup" groups=["botones"]]
margin_left = 81.0
margin_top = 165.0
margin_right = 270.0
margin_bottom = 202.0
focus_mode = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0117647, 0.188235, 1, 1 )
custom_fonts/font = SubResource( 14 )
enabled_focus_mode = 1
text = "Cancelar"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -15.864

[connection signal="pressed" from="ProfileButton" to="." method="_on_ProfileButton_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxMenu/Tienda" to="." method="_on_Tienda_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxMenu/Enciclopedia" to="." method="_on_Enciclopedia_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxMenu/Cavado" to="." method="_on_Cavado_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxMenu/Reciclaje" to="." method="_on_Reciclaje_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxMenu/Animales" to="." method="_on_Animales_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxMenu/Arbol" to="." method="_on_Arbol_pressed"]
[connection signal="pressed" from="SalirPopup/SalirMenu" to="." method="_on_SalirMenu_pressed"]
[connection signal="pressed" from="SalirPopup/SalirJuego" to="." method="_on_SalirJuego_pressed"]
[connection signal="pressed" from="SalirPopup/Cancelar4" to="." method="_on_Cancelar4_pressed"]
